parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> asignacion
Rule 5     instruccion -> asignacion_struct
Rule 6     instruccion -> declareFunction
Rule 7     instruccion -> callFunction
Rule 8     instruccion -> condicional
Rule 9     instruccion -> whileST
Rule 10    instruccion -> forST
Rule 11    instruccion -> struct
Rule 12    instruccion -> inst_nativa
Rule 13    declareFunction -> FUNCTION IDENTIFICADOR LPAR RPAR END SEMICOLON
Rule 14    declareFunction -> FUNCTION IDENTIFICADOR LPAR lista_parametros RPAR lista_instrucciones END SEMICOLON
Rule 15    declareFunction -> FUNCTION IDENTIFICADOR LPAR RPAR lista_instrucciones END SEMICOLON
Rule 16    declareFunction -> FUNCTION IDENTIFICADOR LPAR lista_parametros RPAR END SEMICOLON
Rule 17    lista_instrucciones -> lista_instrucciones instruccion
Rule 18    lista_instrucciones -> lista_instrucciones transferencia
Rule 19    lista_instrucciones -> instruccion
Rule 20    lista_instrucciones -> transferencia
Rule 21    transferencia -> BREAK SEMICOLON
Rule 22    transferencia -> CONTINUE SEMICOLON
Rule 23    transferencia -> returnValue SEMICOLON
Rule 24    returnValue -> RETURN expresion
Rule 25    returnValue -> RETURN
Rule 26    lista_parametros -> lista_parametros COMMA IDENTIFICADOR
Rule 27    lista_parametros -> lista_parametros COMMA IDENTIFICADOR SUFIX tipo_dato
Rule 28    lista_parametros -> IDENTIFICADOR SUFIX tipo_dato
Rule 29    lista_parametros -> IDENTIFICADOR
Rule 30    asignacion -> IDENTIFICADOR EQUALS expresion SEMICOLON
Rule 31    asignacion -> IDENTIFICADOR EQUALS expresion SUFIX tipo_dato SEMICOLON
Rule 32    asignacion -> tipoVariable IDENTIFICADOR EQUALS expresion SEMICOLON
Rule 33    asignacion -> tipoVariable IDENTIFICADOR EQUALS expresion SUFIX tipo_dato SEMICOLON
Rule 34    asignacion_struct -> IDENTIFICADOR PUNTO IDENTIFICADOR EQUALS expresion SEMICOLON
Rule 35    tipoVariable -> GLOBAL
Rule 36    tipoVariable -> LOCAL
Rule 37    tipo_dato -> INT64
Rule 38    tipo_dato -> FLOAT64
Rule 39    tipo_dato -> BOOL
Rule 40    tipo_dato -> CHAR
Rule 41    tipo_dato -> STRING
Rule 42    tipo_dato -> ARRAY
Rule 43    tipo_dato -> NOTHING
Rule 44    callFunction -> callFunc SEMICOLON
Rule 45    callFunc -> IDENTIFICADOR LPAR RPAR
Rule 46    callFunc -> IDENTIFICADOR LPAR lista_expresion RPAR
Rule 47    sentencias -> lista_instrucciones
Rule 48    sentencias -> <empty>
Rule 49    condicional -> IF expresion sentencias END SEMICOLON
Rule 50    condicional -> IF expresion sentencias elseifList END SEMICOLON
Rule 51    condicional -> IF expresion sentencias ELSE sentencias END SEMICOLON
Rule 52    condicional -> IF expresion sentencias elseifList ELSE sentencias END SEMICOLON
Rule 53    elseifList -> elseifList ELSEIF expresion sentencias
Rule 54    elseifList -> ELSEIF expresion sentencias
Rule 55    whileST -> WHILE expresion sentencias END SEMICOLON
Rule 56    forST -> FOR IDENTIFICADOR IN expresion sentencias END SEMICOLON
Rule 57    lista_expresion -> lista_expresion COMMA expresion
Rule 58    lista_expresion -> expresion
Rule 59    struct -> MUTABLE STRUCT IDENTIFICADOR lista_atributos END SEMICOLON
Rule 60    struct -> STRUCT IDENTIFICADOR lista_atributos END SEMICOLON
Rule 61    lista_atributos -> lista_atributos IDENTIFICADOR SUFIX tipo_dato SEMICOLON
Rule 62    lista_atributos -> lista_atributos IDENTIFICADOR SEMICOLON
Rule 63    lista_atributos -> IDENTIFICADOR SUFIX tipo_dato SEMICOLON
Rule 64    lista_atributos -> IDENTIFICADOR SEMICOLON
Rule 65    inst_nativa -> PRINT LPAR lista_expresion RPAR SEMICOLON
Rule 66    inst_nativa -> PRINTLN LPAR lista_expresion RPAR SEMICOLON
Rule 67    inst_nativa -> PUSH LPAR IDENTIFICADOR COMMA expresion RPAR SEMICOLON
Rule 68    inst_nativa -> POP LPAR IDENTIFICADOR COMMA expresion RPAR SEMICOLON
Rule 69    expresion -> RESTA expresion
Rule 70    expresion -> NOT expresion
Rule 71    expresion -> expresion AND expresion
Rule 72    expresion -> expresion OR expresion
Rule 73    expresion -> expresion SUM expresion
Rule 74    expresion -> expresion RESTA expresion
Rule 75    expresion -> expresion MUL expresion
Rule 76    expresion -> expresion DIV expresion
Rule 77    expresion -> expresion POT expresion
Rule 78    expresion -> expresion MOD expresion
Rule 79    expresion -> expresion DEQUALS expresion
Rule 80    expresion -> expresion DIFF expresion
Rule 81    expresion -> expresion GREATER expresion
Rule 82    expresion -> expresion LESSTHAN expresion
Rule 83    expresion -> expresion GEQ expresion
Rule 84    expresion -> expresion LEQ expresion
Rule 85    expresion -> IDENTIFICADOR
Rule 86    expresion -> IDENTIFICADOR PUNTO IDENTIFICADOR
Rule 87    expresion -> LPAR expresion RPAR
Rule 88    expresion -> primitivas
Rule 89    expresion -> nativas
Rule 90    expresion -> callFunc
Rule 91    expresion -> callArrays
Rule 92    callArrays -> IDENTIFICADOR dimensiones
Rule 93    dimensiones -> dimensiones BRACKETA expresion BRACKETC
Rule 94    dimensiones -> BRACKETA expresion BRACKETC
Rule 95    primitivas -> ENTERO
Rule 96    primitivas -> DECIMAL
Rule 97    primitivas -> FALSE
Rule 98    primitivas -> TRUE
Rule 99    primitivas -> STRINGLITERAL
Rule 100   primitivas -> CHARLITERAL
Rule 101   primitivas -> NOTHING
Rule 102   primitivas -> BRACKETA BRACKETC
Rule 103   primitivas -> BRACKETA items BRACKETC
Rule 104   nativas -> SENO LPAR expresion RPAR
Rule 105   nativas -> COSENO LPAR expresion RPAR
Rule 106   nativas -> LOG LPAR expresion COMMA expresion RPAR
Rule 107   nativas -> LOG10 LPAR expresion RPAR
Rule 108   nativas -> RAIZ LPAR expresion RPAR
Rule 109   nativas -> TANGENTE LPAR expresion RPAR
Rule 110   nativas -> LOWERCASE LPAR expresion RPAR
Rule 111   nativas -> UPPERCASE LPAR expresion RPAR
Rule 112   nativas -> PARSE LPAR tipo_dato COMMA expresion RPAR
Rule 113   nativas -> TRUNC LPAR tipo_dato COMMA expresion RPAR
Rule 114   nativas -> FLOATCAST LPAR expresion RPAR
Rule 115   nativas -> STRINGCAST LPAR expresion RPAR
Rule 116   nativas -> TYPEOF LPAR expresion RPAR
Rule 117   items -> items COMMA expresion
Rule 118   items -> expresion

Terminals, with rules where they appear

AND                  : 71
ARRAY                : 42
BOOL                 : 39
BRACKETA             : 93 94 102 103
BRACKETC             : 93 94 102 103
BREAK                : 21
CHAR                 : 40
CHARLITERAL          : 100
COMMA                : 26 27 57 67 68 106 112 113 117
CONTINUE             : 22
COSENO               : 105
DECIMAL              : 96
DEQUALS              : 79
DIFF                 : 80
DIV                  : 76
ELSE                 : 51 52
ELSEIF               : 53 54
END                  : 13 14 15 16 49 50 51 52 55 56 59 60
ENTERO               : 95
EQUALS               : 30 31 32 33 34
FALSE                : 97
FLOAT64              : 38
FLOATCAST            : 114
FOR                  : 56
FUNCTION             : 13 14 15 16
GEQ                  : 83
GLOBAL               : 35
GREATER              : 81
IDENTIFICADOR        : 13 14 15 16 26 27 28 29 30 31 32 33 34 34 45 46 56 59 60 61 62 63 64 67 68 85 86 86 92
IF                   : 49 50 51 52
IN                   : 56
INT64                : 37
LEQ                  : 84
LESSTHAN             : 82
LOCAL                : 36
LOG                  : 106
LOG10                : 107
LOWERCASE            : 110
LPAR                 : 13 14 15 16 45 46 65 66 67 68 87 104 105 106 107 108 109 110 111 112 113 114 115 116
MOD                  : 78
MUL                  : 75
MUTABLE              : 59
NOT                  : 70
NOTHING              : 43 101
OR                   : 72
PARSE                : 112
POP                  : 68
POT                  : 77
PRINT                : 65
PRINTLN              : 66
PUNTO                : 34 86
PUSH                 : 67
RAIZ                 : 108
RESTA                : 69 74
RETURN               : 24 25
RPAR                 : 13 14 15 16 45 46 65 66 67 68 87 104 105 106 107 108 109 110 111 112 113 114 115 116
SEMICOLON            : 13 14 15 16 21 22 23 30 31 32 33 34 44 49 50 51 52 55 56 59 60 61 62 63 64 65 66 67 68
SENO                 : 104
STRING               : 41
STRINGCAST           : 115
STRINGLITERAL        : 99
STRUCT               : 59 60
SUFIX                : 27 28 31 33 61 63
SUM                  : 73
TANGENTE             : 109
TRUE                 : 98
TRUNC                : 113
TYPEOF               : 116
UPPERCASE            : 111
WHILE                : 55
error                : 

Nonterminals, with rules where they appear

asignacion           : 4
asignacion_struct    : 5
callArrays           : 91
callFunc             : 44 90
callFunction         : 7
condicional          : 8
declareFunction      : 6
dimensiones          : 92 93
elseifList           : 50 52 53
expresion            : 24 30 31 32 33 34 49 50 51 52 53 54 55 56 57 58 67 68 69 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 87 93 94 104 105 106 106 107 108 109 110 111 112 113 114 115 116 117 118
forST                : 10
inicio               : 0
inst_nativa          : 12
instruccion          : 2 3 17 19
instrucciones        : 1 2
items                : 103 117
lista_atributos      : 59 60 61 62
lista_expresion      : 46 57 65 66
lista_instrucciones  : 14 15 17 18 47
lista_parametros     : 14 16 26 27
nativas              : 89
primitivas           : 88
returnValue          : 23
sentencias           : 49 50 51 51 52 52 53 54 55 56
struct               : 11
tipoVariable         : 32 33
tipo_dato            : 27 28 31 33 61 63 112 113
transferencia        : 18 20
whileST              : 9

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . asignacion
    (5) instruccion -> . asignacion_struct
    (6) instruccion -> . declareFunction
    (7) instruccion -> . callFunction
    (8) instruccion -> . condicional
    (9) instruccion -> . whileST
    (10) instruccion -> . forST
    (11) instruccion -> . struct
    (12) instruccion -> . inst_nativa
    (30) asignacion -> . IDENTIFICADOR EQUALS expresion SEMICOLON
    (31) asignacion -> . IDENTIFICADOR EQUALS expresion SUFIX tipo_dato SEMICOLON
    (32) asignacion -> . tipoVariable IDENTIFICADOR EQUALS expresion SEMICOLON
    (33) asignacion -> . tipoVariable IDENTIFICADOR EQUALS expresion SUFIX tipo_dato SEMICOLON
    (34) asignacion_struct -> . IDENTIFICADOR PUNTO IDENTIFICADOR EQUALS expresion SEMICOLON
    (13) declareFunction -> . FUNCTION IDENTIFICADOR LPAR RPAR END SEMICOLON
    (14) declareFunction -> . FUNCTION IDENTIFICADOR LPAR lista_parametros RPAR lista_instrucciones END SEMICOLON
    (15) declareFunction -> . FUNCTION IDENTIFICADOR LPAR RPAR lista_instrucciones END SEMICOLON
    (16) declareFunction -> . FUNCTION IDENTIFICADOR LPAR lista_parametros RPAR END SEMICOLON
    (44) callFunction -> . callFunc SEMICOLON
    (49) condicional -> . IF expresion sentencias END SEMICOLON
    (50) condicional -> . IF expresion sentencias elseifList END SEMICOLON
    (51) condicional -> . IF expresion sentencias ELSE sentencias END SEMICOLON
    (52) condicional -> . IF expresion sentencias elseifList ELSE sentencias END SEMICOLON
    (55) whileST -> . WHILE expresion sentencias END SEMICOLON
    (56) forST -> . FOR IDENTIFICADOR IN expresion sentencias END SEMICOLON
    (59) struct -> . MUTABLE STRUCT IDENTIFICADOR lista_atributos END SEMICOLON
    (60) struct -> . STRUCT IDENTIFICADOR lista_atributos END SEMICOLON
    (65) inst_nativa -> . PRINT LPAR lista_expresion RPAR SEMICOLON
    (66) inst_nativa -> . PRINTLN LPAR lista_expresion RPAR SEMICOLON
    (67) inst_nativa -> . PUSH LPAR IDENTIFICADOR COMMA expresion RPAR SEMICOLON
    (68) inst_nativa -> . POP LPAR IDENTIFICADOR COMMA expresion RPAR SEMICOLON
    (35) tipoVariable -> . GLOBAL
    (36) tipoVariable -> . LOCAL
    (45) callFunc -> . IDENTIFICADOR LPAR RPAR
    (46) callFunc -> . IDENTIFICADOR LPAR lista_expresion RPAR

    IDENTIFICADOR   shift and go to state 13
    FUNCTION        shift and go to state 15
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    MUTABLE         shift and go to state 20
    STRUCT          shift and go to state 21
    PRINT           shift and go to state 22
    PRINTLN         shift and go to state 23
    PUSH            shift and go to state 24
    POP             shift and go to state 25
    GLOBAL          shift and go to state 26
    LOCAL           shift and go to state 27

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    asignacion                     shift and go to state 4
    asignacion_struct              shift and go to state 5
    declareFunction                shift and go to state 6
    callFunction                   shift and go to state 7
    condicional                    shift and go to state 8
    whileST                        shift and go to state 9
    forST                          shift and go to state 10
    struct                         shift and go to state 11
    inst_nativa                    shift and go to state 12
    tipoVariable                   shift and go to state 14
    callFunc                       shift and go to state 16

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . asignacion
    (5) instruccion -> . asignacion_struct
    (6) instruccion -> . declareFunction
    (7) instruccion -> . callFunction
    (8) instruccion -> . condicional
    (9) instruccion -> . whileST
    (10) instruccion -> . forST
    (11) instruccion -> . struct
    (12) instruccion -> . inst_nativa
    (30) asignacion -> . IDENTIFICADOR EQUALS expresion SEMICOLON
    (31) asignacion -> . IDENTIFICADOR EQUALS expresion SUFIX tipo_dato SEMICOLON
    (32) asignacion -> . tipoVariable IDENTIFICADOR EQUALS expresion SEMICOLON
    (33) asignacion -> . tipoVariable IDENTIFICADOR EQUALS expresion SUFIX tipo_dato SEMICOLON
    (34) asignacion_struct -> . IDENTIFICADOR PUNTO IDENTIFICADOR EQUALS expresion SEMICOLON
    (13) declareFunction -> . FUNCTION IDENTIFICADOR LPAR RPAR END SEMICOLON
    (14) declareFunction -> . FUNCTION IDENTIFICADOR LPAR lista_parametros RPAR lista_instrucciones END SEMICOLON
    (15) declareFunction -> . FUNCTION IDENTIFICADOR LPAR RPAR lista_instrucciones END SEMICOLON
    (16) declareFunction -> . FUNCTION IDENTIFICADOR LPAR lista_parametros RPAR END SEMICOLON
    (44) callFunction -> . callFunc SEMICOLON
    (49) condicional -> . IF expresion sentencias END SEMICOLON
    (50) condicional -> . IF expresion sentencias elseifList END SEMICOLON
    (51) condicional -> . IF expresion sentencias ELSE sentencias END SEMICOLON
    (52) condicional -> . IF expresion sentencias elseifList ELSE sentencias END SEMICOLON
    (55) whileST -> . WHILE expresion sentencias END SEMICOLON
    (56) forST -> . FOR IDENTIFICADOR IN expresion sentencias END SEMICOLON
    (59) struct -> . MUTABLE STRUCT IDENTIFICADOR lista_atributos END SEMICOLON
    (60) struct -> . STRUCT IDENTIFICADOR lista_atributos END SEMICOLON
    (65) inst_nativa -> . PRINT LPAR lista_expresion RPAR SEMICOLON
    (66) inst_nativa -> . PRINTLN LPAR lista_expresion RPAR SEMICOLON
    (67) inst_nativa -> . PUSH LPAR IDENTIFICADOR COMMA expresion RPAR SEMICOLON
    (68) inst_nativa -> . POP LPAR IDENTIFICADOR COMMA expresion RPAR SEMICOLON
    (35) tipoVariable -> . GLOBAL
    (36) tipoVariable -> . LOCAL
    (45) callFunc -> . IDENTIFICADOR LPAR RPAR
    (46) callFunc -> . IDENTIFICADOR LPAR lista_expresion RPAR

    $end            reduce using rule 1 (inicio -> instrucciones .)
    IDENTIFICADOR   shift and go to state 13
    FUNCTION        shift and go to state 15
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    MUTABLE         shift and go to state 20
    STRUCT          shift and go to state 21
    PRINT           shift and go to state 22
    PRINTLN         shift and go to state 23
    PUSH            shift and go to state 24
    POP             shift and go to state 25
    GLOBAL          shift and go to state 26
    LOCAL           shift and go to state 27

    instruccion                    shift and go to state 28
    asignacion                     shift and go to state 4
    asignacion_struct              shift and go to state 5
    declareFunction                shift and go to state 6
    callFunction                   shift and go to state 7
    condicional                    shift and go to state 8
    whileST                        shift and go to state 9
    forST                          shift and go to state 10
    struct                         shift and go to state 11
    inst_nativa                    shift and go to state 12
    tipoVariable                   shift and go to state 14
    callFunc                       shift and go to state 16

state 3

    (3) instrucciones -> instruccion .

    IDENTIFICADOR   reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    MUTABLE         reduce using rule 3 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 3 (instrucciones -> instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    PUSH            reduce using rule 3 (instrucciones -> instruccion .)
    POP             reduce using rule 3 (instrucciones -> instruccion .)
    GLOBAL          reduce using rule 3 (instrucciones -> instruccion .)
    LOCAL           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> asignacion .

    IDENTIFICADOR   reduce using rule 4 (instruccion -> asignacion .)
    FUNCTION        reduce using rule 4 (instruccion -> asignacion .)
    IF              reduce using rule 4 (instruccion -> asignacion .)
    WHILE           reduce using rule 4 (instruccion -> asignacion .)
    FOR             reduce using rule 4 (instruccion -> asignacion .)
    MUTABLE         reduce using rule 4 (instruccion -> asignacion .)
    STRUCT          reduce using rule 4 (instruccion -> asignacion .)
    PRINT           reduce using rule 4 (instruccion -> asignacion .)
    PRINTLN         reduce using rule 4 (instruccion -> asignacion .)
    PUSH            reduce using rule 4 (instruccion -> asignacion .)
    POP             reduce using rule 4 (instruccion -> asignacion .)
    GLOBAL          reduce using rule 4 (instruccion -> asignacion .)
    LOCAL           reduce using rule 4 (instruccion -> asignacion .)
    $end            reduce using rule 4 (instruccion -> asignacion .)
    BREAK           reduce using rule 4 (instruccion -> asignacion .)
    CONTINUE        reduce using rule 4 (instruccion -> asignacion .)
    RETURN          reduce using rule 4 (instruccion -> asignacion .)
    END             reduce using rule 4 (instruccion -> asignacion .)
    ELSE            reduce using rule 4 (instruccion -> asignacion .)
    ELSEIF          reduce using rule 4 (instruccion -> asignacion .)


state 5

    (5) instruccion -> asignacion_struct .

    IDENTIFICADOR   reduce using rule 5 (instruccion -> asignacion_struct .)
    FUNCTION        reduce using rule 5 (instruccion -> asignacion_struct .)
    IF              reduce using rule 5 (instruccion -> asignacion_struct .)
    WHILE           reduce using rule 5 (instruccion -> asignacion_struct .)
    FOR             reduce using rule 5 (instruccion -> asignacion_struct .)
    MUTABLE         reduce using rule 5 (instruccion -> asignacion_struct .)
    STRUCT          reduce using rule 5 (instruccion -> asignacion_struct .)
    PRINT           reduce using rule 5 (instruccion -> asignacion_struct .)
    PRINTLN         reduce using rule 5 (instruccion -> asignacion_struct .)
    PUSH            reduce using rule 5 (instruccion -> asignacion_struct .)
    POP             reduce using rule 5 (instruccion -> asignacion_struct .)
    GLOBAL          reduce using rule 5 (instruccion -> asignacion_struct .)
    LOCAL           reduce using rule 5 (instruccion -> asignacion_struct .)
    $end            reduce using rule 5 (instruccion -> asignacion_struct .)
    BREAK           reduce using rule 5 (instruccion -> asignacion_struct .)
    CONTINUE        reduce using rule 5 (instruccion -> asignacion_struct .)
    RETURN          reduce using rule 5 (instruccion -> asignacion_struct .)
    END             reduce using rule 5 (instruccion -> asignacion_struct .)
    ELSE            reduce using rule 5 (instruccion -> asignacion_struct .)
    ELSEIF          reduce using rule 5 (instruccion -> asignacion_struct .)


state 6

    (6) instruccion -> declareFunction .

    IDENTIFICADOR   reduce using rule 6 (instruccion -> declareFunction .)
    FUNCTION        reduce using rule 6 (instruccion -> declareFunction .)
    IF              reduce using rule 6 (instruccion -> declareFunction .)
    WHILE           reduce using rule 6 (instruccion -> declareFunction .)
    FOR             reduce using rule 6 (instruccion -> declareFunction .)
    MUTABLE         reduce using rule 6 (instruccion -> declareFunction .)
    STRUCT          reduce using rule 6 (instruccion -> declareFunction .)
    PRINT           reduce using rule 6 (instruccion -> declareFunction .)
    PRINTLN         reduce using rule 6 (instruccion -> declareFunction .)
    PUSH            reduce using rule 6 (instruccion -> declareFunction .)
    POP             reduce using rule 6 (instruccion -> declareFunction .)
    GLOBAL          reduce using rule 6 (instruccion -> declareFunction .)
    LOCAL           reduce using rule 6 (instruccion -> declareFunction .)
    $end            reduce using rule 6 (instruccion -> declareFunction .)
    BREAK           reduce using rule 6 (instruccion -> declareFunction .)
    CONTINUE        reduce using rule 6 (instruccion -> declareFunction .)
    RETURN          reduce using rule 6 (instruccion -> declareFunction .)
    END             reduce using rule 6 (instruccion -> declareFunction .)
    ELSE            reduce using rule 6 (instruccion -> declareFunction .)
    ELSEIF          reduce using rule 6 (instruccion -> declareFunction .)


state 7

    (7) instruccion -> callFunction .

    IDENTIFICADOR   reduce using rule 7 (instruccion -> callFunction .)
    FUNCTION        reduce using rule 7 (instruccion -> callFunction .)
    IF              reduce using rule 7 (instruccion -> callFunction .)
    WHILE           reduce using rule 7 (instruccion -> callFunction .)
    FOR             reduce using rule 7 (instruccion -> callFunction .)
    MUTABLE         reduce using rule 7 (instruccion -> callFunction .)
    STRUCT          reduce using rule 7 (instruccion -> callFunction .)
    PRINT           reduce using rule 7 (instruccion -> callFunction .)
    PRINTLN         reduce using rule 7 (instruccion -> callFunction .)
    PUSH            reduce using rule 7 (instruccion -> callFunction .)
    POP             reduce using rule 7 (instruccion -> callFunction .)
    GLOBAL          reduce using rule 7 (instruccion -> callFunction .)
    LOCAL           reduce using rule 7 (instruccion -> callFunction .)
    $end            reduce using rule 7 (instruccion -> callFunction .)
    BREAK           reduce using rule 7 (instruccion -> callFunction .)
    CONTINUE        reduce using rule 7 (instruccion -> callFunction .)
    RETURN          reduce using rule 7 (instruccion -> callFunction .)
    END             reduce using rule 7 (instruccion -> callFunction .)
    ELSE            reduce using rule 7 (instruccion -> callFunction .)
    ELSEIF          reduce using rule 7 (instruccion -> callFunction .)


state 8

    (8) instruccion -> condicional .

    IDENTIFICADOR   reduce using rule 8 (instruccion -> condicional .)
    FUNCTION        reduce using rule 8 (instruccion -> condicional .)
    IF              reduce using rule 8 (instruccion -> condicional .)
    WHILE           reduce using rule 8 (instruccion -> condicional .)
    FOR             reduce using rule 8 (instruccion -> condicional .)
    MUTABLE         reduce using rule 8 (instruccion -> condicional .)
    STRUCT          reduce using rule 8 (instruccion -> condicional .)
    PRINT           reduce using rule 8 (instruccion -> condicional .)
    PRINTLN         reduce using rule 8 (instruccion -> condicional .)
    PUSH            reduce using rule 8 (instruccion -> condicional .)
    POP             reduce using rule 8 (instruccion -> condicional .)
    GLOBAL          reduce using rule 8 (instruccion -> condicional .)
    LOCAL           reduce using rule 8 (instruccion -> condicional .)
    $end            reduce using rule 8 (instruccion -> condicional .)
    BREAK           reduce using rule 8 (instruccion -> condicional .)
    CONTINUE        reduce using rule 8 (instruccion -> condicional .)
    RETURN          reduce using rule 8 (instruccion -> condicional .)
    END             reduce using rule 8 (instruccion -> condicional .)
    ELSE            reduce using rule 8 (instruccion -> condicional .)
    ELSEIF          reduce using rule 8 (instruccion -> condicional .)


state 9

    (9) instruccion -> whileST .

    IDENTIFICADOR   reduce using rule 9 (instruccion -> whileST .)
    FUNCTION        reduce using rule 9 (instruccion -> whileST .)
    IF              reduce using rule 9 (instruccion -> whileST .)
    WHILE           reduce using rule 9 (instruccion -> whileST .)
    FOR             reduce using rule 9 (instruccion -> whileST .)
    MUTABLE         reduce using rule 9 (instruccion -> whileST .)
    STRUCT          reduce using rule 9 (instruccion -> whileST .)
    PRINT           reduce using rule 9 (instruccion -> whileST .)
    PRINTLN         reduce using rule 9 (instruccion -> whileST .)
    PUSH            reduce using rule 9 (instruccion -> whileST .)
    POP             reduce using rule 9 (instruccion -> whileST .)
    GLOBAL          reduce using rule 9 (instruccion -> whileST .)
    LOCAL           reduce using rule 9 (instruccion -> whileST .)
    $end            reduce using rule 9 (instruccion -> whileST .)
    BREAK           reduce using rule 9 (instruccion -> whileST .)
    CONTINUE        reduce using rule 9 (instruccion -> whileST .)
    RETURN          reduce using rule 9 (instruccion -> whileST .)
    END             reduce using rule 9 (instruccion -> whileST .)
    ELSE            reduce using rule 9 (instruccion -> whileST .)
    ELSEIF          reduce using rule 9 (instruccion -> whileST .)


state 10

    (10) instruccion -> forST .

    IDENTIFICADOR   reduce using rule 10 (instruccion -> forST .)
    FUNCTION        reduce using rule 10 (instruccion -> forST .)
    IF              reduce using rule 10 (instruccion -> forST .)
    WHILE           reduce using rule 10 (instruccion -> forST .)
    FOR             reduce using rule 10 (instruccion -> forST .)
    MUTABLE         reduce using rule 10 (instruccion -> forST .)
    STRUCT          reduce using rule 10 (instruccion -> forST .)
    PRINT           reduce using rule 10 (instruccion -> forST .)
    PRINTLN         reduce using rule 10 (instruccion -> forST .)
    PUSH            reduce using rule 10 (instruccion -> forST .)
    POP             reduce using rule 10 (instruccion -> forST .)
    GLOBAL          reduce using rule 10 (instruccion -> forST .)
    LOCAL           reduce using rule 10 (instruccion -> forST .)
    $end            reduce using rule 10 (instruccion -> forST .)
    BREAK           reduce using rule 10 (instruccion -> forST .)
    CONTINUE        reduce using rule 10 (instruccion -> forST .)
    RETURN          reduce using rule 10 (instruccion -> forST .)
    END             reduce using rule 10 (instruccion -> forST .)
    ELSE            reduce using rule 10 (instruccion -> forST .)
    ELSEIF          reduce using rule 10 (instruccion -> forST .)


state 11

    (11) instruccion -> struct .

    IDENTIFICADOR   reduce using rule 11 (instruccion -> struct .)
    FUNCTION        reduce using rule 11 (instruccion -> struct .)
    IF              reduce using rule 11 (instruccion -> struct .)
    WHILE           reduce using rule 11 (instruccion -> struct .)
    FOR             reduce using rule 11 (instruccion -> struct .)
    MUTABLE         reduce using rule 11 (instruccion -> struct .)
    STRUCT          reduce using rule 11 (instruccion -> struct .)
    PRINT           reduce using rule 11 (instruccion -> struct .)
    PRINTLN         reduce using rule 11 (instruccion -> struct .)
    PUSH            reduce using rule 11 (instruccion -> struct .)
    POP             reduce using rule 11 (instruccion -> struct .)
    GLOBAL          reduce using rule 11 (instruccion -> struct .)
    LOCAL           reduce using rule 11 (instruccion -> struct .)
    $end            reduce using rule 11 (instruccion -> struct .)
    BREAK           reduce using rule 11 (instruccion -> struct .)
    CONTINUE        reduce using rule 11 (instruccion -> struct .)
    RETURN          reduce using rule 11 (instruccion -> struct .)
    END             reduce using rule 11 (instruccion -> struct .)
    ELSE            reduce using rule 11 (instruccion -> struct .)
    ELSEIF          reduce using rule 11 (instruccion -> struct .)


state 12

    (12) instruccion -> inst_nativa .

    IDENTIFICADOR   reduce using rule 12 (instruccion -> inst_nativa .)
    FUNCTION        reduce using rule 12 (instruccion -> inst_nativa .)
    IF              reduce using rule 12 (instruccion -> inst_nativa .)
    WHILE           reduce using rule 12 (instruccion -> inst_nativa .)
    FOR             reduce using rule 12 (instruccion -> inst_nativa .)
    MUTABLE         reduce using rule 12 (instruccion -> inst_nativa .)
    STRUCT          reduce using rule 12 (instruccion -> inst_nativa .)
    PRINT           reduce using rule 12 (instruccion -> inst_nativa .)
    PRINTLN         reduce using rule 12 (instruccion -> inst_nativa .)
    PUSH            reduce using rule 12 (instruccion -> inst_nativa .)
    POP             reduce using rule 12 (instruccion -> inst_nativa .)
    GLOBAL          reduce using rule 12 (instruccion -> inst_nativa .)
    LOCAL           reduce using rule 12 (instruccion -> inst_nativa .)
    $end            reduce using rule 12 (instruccion -> inst_nativa .)
    BREAK           reduce using rule 12 (instruccion -> inst_nativa .)
    CONTINUE        reduce using rule 12 (instruccion -> inst_nativa .)
    RETURN          reduce using rule 12 (instruccion -> inst_nativa .)
    END             reduce using rule 12 (instruccion -> inst_nativa .)
    ELSE            reduce using rule 12 (instruccion -> inst_nativa .)
    ELSEIF          reduce using rule 12 (instruccion -> inst_nativa .)


state 13

    (30) asignacion -> IDENTIFICADOR . EQUALS expresion SEMICOLON
    (31) asignacion -> IDENTIFICADOR . EQUALS expresion SUFIX tipo_dato SEMICOLON
    (34) asignacion_struct -> IDENTIFICADOR . PUNTO IDENTIFICADOR EQUALS expresion SEMICOLON
    (45) callFunc -> IDENTIFICADOR . LPAR RPAR
    (46) callFunc -> IDENTIFICADOR . LPAR lista_expresion RPAR

    EQUALS          shift and go to state 29
    PUNTO           shift and go to state 30
    LPAR            shift and go to state 31


state 14

    (32) asignacion -> tipoVariable . IDENTIFICADOR EQUALS expresion SEMICOLON
    (33) asignacion -> tipoVariable . IDENTIFICADOR EQUALS expresion SUFIX tipo_dato SEMICOLON

    IDENTIFICADOR   shift and go to state 32


state 15

    (13) declareFunction -> FUNCTION . IDENTIFICADOR LPAR RPAR END SEMICOLON
    (14) declareFunction -> FUNCTION . IDENTIFICADOR LPAR lista_parametros RPAR lista_instrucciones END SEMICOLON
    (15) declareFunction -> FUNCTION . IDENTIFICADOR LPAR RPAR lista_instrucciones END SEMICOLON
    (16) declareFunction -> FUNCTION . IDENTIFICADOR LPAR lista_parametros RPAR END SEMICOLON

    IDENTIFICADOR   shift and go to state 33


state 16

    (44) callFunction -> callFunc . SEMICOLON
